[gd_scene load_steps=6 format=3 uid="uid://bjfgv7r1815p0"]

[ext_resource type="Script" path="res://scenes/spinosaurus.gd" id="1_1tw4l"]
[ext_resource type="Texture2D" uid="uid://c160ocf5ndrg1" path="res://icon.svg" id="1_j4tod"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yxuq5"]
size = Vector2(74, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_ibpdm"]
radius = 122.989

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fxigj"]
size = Vector2(81, 70.5)

[node name="spinosaurus" type="CharacterBody2D"]
script = ExtResource("1_1tw4l")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(27, 20)
scale = Vector2(0.609375, 0.546875)
texture = ExtResource("1_j4tod")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(27, 22)
shape = SubResource("RectangleShape2D_yxuq5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(22, 20)
shape = SubResource("CircleShape2D_ibpdm")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(28.5, 19.75)
shape = SubResource("RectangleShape2D_fxigj")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
